--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "prod": "node app.js"
+    "prod": "cross-env ENVIRONMENT=production node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
